--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -1,8 +1,10 @@
 {% extends 'base.html' %} {% load static %} {% block content %}
 
-<section class="home">
-    <img src="{% static 'icons/bootstrap.svg' %}" alt="" height="72" width="72" class="mb-4" />
-    <h1 class="h3 mb-3 font-weight-normal">Guillermo Brachetta</h1>
+<section class="home row">
+    <div class="col">
+        <img src="{% static 'icons/bootstrap.svg' %}" alt="" height="72" width="72" class="mb-4" />
+        <h1 class="h3 mb-3 font-weight-normal">Guillermo Brachetta</h1>
+    </div>
 </section>
 
 {% endblock content %}
