--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,21 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-        <link rel="stylesheet" href="{% static 'css/main.min.css' %}" />
-        <title>Guillermo Brachetta</title>
-    </head>
 
-    <body class="d-flex text-center bg-secondary">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="{% static 'css/main.min.css' %}" />
+    <title>Guillermo Brachetta</title>
+</head>
+
+<body class="d-flex text-center bg-secondary">
+    <header>
+    </header>
+    <main>
         {% block content %} {% endblock content %}
-    </body>
+    </main>
+</body>
+
 </html>
