Moved images to static folder for automatic collection

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -3,7 +3,7 @@
 <section class="home row">
     <div class="col">
         <img src="{% static 'icons/bootstrap.svg' %}" alt="" height="72" width="72" class="mb-4" />
-        <img class="img-responsive" src="{% static 'images/guillermo11-min.jpg' %}" width="200" height="300" alt="">
+        <img class="img-responsive" src="{% static 'images/guillermo11.jpg' %}" width="200" height="300" alt="">
         <h1 class="h3 mb-3 font-weight-normal">Guillermo Brachetta</h1>
     </div>
 </section>
