Added extra div with second image in home.html

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -11,7 +11,7 @@
     <div id="intro" class="intro">
         <div class="background-container">
             <div class="wrapper">
-                <h1>INTRO</h1>
+                <h1>GUILLERMO BRACHETTA</h1>
             </div>
         </div>
     </div>
@@ -20,6 +20,14 @@
             <div class="img"></div>
             <div class="wrapper">
                 <h1>TITLE ONE</h1>
+            </div>
+        </div>
+    </div>
+    <div id="slide02" class="slide">
+        <div class="pin-wrapper">
+            <div class="img-02"></div>
+                <div class="wrapper">
+                    <h1>THE RESEARCHER</h1>
             </div>
         </div>
     </div>
