Set navbar to dark background

--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -1,5 +1,5 @@
 {% load static %}
-<nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+<nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#"
         ><img class="logo" src="{% static 'icons/logo.svg' %}" height="72" width="72" alt="Logo"
     /></a>
