Added classes and styled them for titles in home.html

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -10,24 +10,24 @@
 <div id="main" class="main-container">
     <div id="intro" class="intro">
         <div class="background-container">
-            <div class="wrapper">
-                <h1>GUILLERMO BRACHETTA</h1>
+            <div class="wrapper-main">
+                <h1 class="name">GUILLERMO BRACHETTA</h1>
             </div>
         </div>
     </div>
     <div id="slide01" class="slide">
         <div class="pin-wrapper">
             <div class="img"></div>
-            <div class="wrapper">
-                <h1>TITLE ONE</h1>
+            <div class="wrapper-musician">
+                <h1 class="musician">THE MUSICIAN</h1>
             </div>
         </div>
     </div>
     <div id="slide02" class="slide">
         <div class="pin-wrapper">
             <div class="img-02"></div>
-                <div class="wrapper">
-                    <h1>THE RESEARCHER</h1>
+                <div class="wrapper-researcher">
+                    <h1 class="researcher">THE RESEARCHER</h1>
             </div>
         </div>
     </div>
