Added dummy text to position and style

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -26,8 +26,17 @@
     <div id="slide02" class="slide">
         <div class="pin-wrapper">
             <div class="img-02"></div>
-                <div class="wrapper-researcher">
-                    <h1 class="researcher">THE RESEARCHER</h1>
+            <div class="wrapper-researcher">
+                <h1 class="researcher">THE RESEARCHER</h1>
+            </div>
+            <div class="wrapper-researcher-text">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, quam labore. Libero
+                    earum ad et accusantium aliquam pariatur fugiat ex rerum culpa, labore
+                    temporibus sit aspernatur suscipit vel commodi, ut minima laudantium vitae non
+                    alias veniam, consequuntur officiis optio! Ducimus consectetur excepturi nam
+                    suscipit nihil, consequuntur aperiam voluptatem exercitationem praesentium!
+                </p>
             </div>
         </div>
     </div>
