--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -33,13 +33,13 @@
                     aria-haspopup="true"
                     aria-expanded="false"
                 >
-                    Dropdown
+                    Media
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Music</a>
+                    <a class="dropdown-item" href="#">Video</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                    <a class="dropdown-item" href="#">Shop</a>
                 </div>
             </li>
         </ul>
