--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
         {% endblock meta %}
         {% block css %}
             <link rel="shortcut icon" href="{% static 'icons/favicon.ico' %}" />
+            <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
             <link rel="stylesheet" href="{% static 'css/main.min.css' %}" />
         {% endblock css %}
         {% block js %}
