--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -39,7 +39,7 @@
                     <a class="dropdown-item" href="#">Music</a>
                     <a class="dropdown-item" href="#">Video</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="#">Shop</a>
+                    <a class="dropdown-item" href="{% url 'shop' %}">Shop</a>
                 </div>
             </li>
         </ul>
