--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -2,5 +2,11 @@
 {% load static %}
 {% block content %}
 <h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
+<h1>SHOP HERE!</h1>
 
 {% endblock content %}
