--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,10 @@
             {% endif %}
             {% block extra_header %}
             {% endblock extra_header %}
+
+            {% block page_header %}
+            {% endblock page_header %}
+
             {% block content %}
             {% endblock content %}
 
