Basic display of CDs in shop page

--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -1,12 +1,55 @@
 {% extends 'base.html' %}
 {% load static %}
+
+{% block page_header %}
+<div class="container header-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock page_header %}
+
 {% block content %}
+<div class="overlay"></div>
 <h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
-<h1>SHOP HERE!</h1>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="product-container col-10 offset-1">
+            <div class="row">
+                {% for cd in cds %}
+                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+                    <div class="card h-100 border-0">
+                        {% if cd.image %}
+                        <a href="">
+                            <img src="{{ cd.image.url }}" alt="{{ cd.name }}" class="card-img-top img-fluid">
+                        </a>
+                        {% else %}
+                        <a href="{% url 'product_detail' cd.id %}">
+                            <img src="{{ MEDIA_URL }}noimage.png" alt="{{ cd.name }}" class="card-img-top img-fluid">
+                        </a>
+                        {% endif %}
+                        <div class="card-body pb-0">
+                            <p class="mb-0">{{ cd.name }}</p>
+                        </div>
+                        <div class="card-footer bg-white pt-0 border-0 text-left">
+                            <div class="row">
+                                <div class="col">
+                                    <p class="lead mb-0 text-left font-weight-bold">${{ cd.price }}</p>
+
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
 
 {% endblock content %}
