--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -11,10 +11,15 @@
 
 {% block content %}
 <div class="overlay"></div>
-<h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
 
 <div class="container-fluid">
+    <div id="delivery-banner" class="row text-center">
+        <div class="col bg-black text-black">
+            <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
+        </div>
+    </div>
     <div class="row">
+
         <div class="col">
             <hr>
             <h2 class="mb-4">Shop Here</h2>
@@ -37,12 +42,12 @@
                         </a>
                         {% endif %}
                         <div class="card-body pb-0">
-                            <p class="mb-0">{{ cd.name }}</p>
+                            <p class="mb-0 lead font-weight-bold">{{ cd.name }}</p>
                         </div>
                         <div class="card-footer bg-white pt-0 border-0 text-left">
                             <div class="row">
-                                <div class="col">
-                                    <p class="lead mb-0 text-left font-weight-bold">${{ cd.price }}</p>
+                                <div class="col text-center">
+                                    <p class="font-weight-bold">€{{ cd.price }}</p>
                                 </div>
                             </div>
                         </div>
