--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -12,7 +12,12 @@
 {% block content %}
 <div class="overlay"></div>
 
-<h4 class="logo-font my-1">Free delivery on orders over ${{ free_delivery_threshold }}!</h4>
+<div id="delivery-banner" class="row text-center">
+    <div class="col bg-black text-black">
+        <h4 class="logo-font my-1">Free delivery if you buy {{ free_delivery_threshold }} CDs!</h4>
+    </div>
+</div>
+<hr class="w-50 mx-auto">
 <h1>{{ cd.name }}</h1>
 
 <div class="container-fluid">
@@ -20,28 +25,20 @@
         <div class="col-12 col-md-6 col-lg-4 offset-lg-2">
             <div class="image-container my-5">
                 {% if cd.image %}
-                <a href="{{ cd.image.url }}" target="_blank">
-                    <img src="{{ cd.image.url }}" alt="{{ cd.name }}" class="card-img-top img-fluid">
-                </a>
+                <img src="{{ cd.image.url }}" alt="{{ cd.name }}" class="card-img-top img-fluid">
                 {% else %}
-                <a href="">
-                    <img src="{{ MEDIA_URL }}noimage.png" alt="{{ cd.name }}" class="card-img-top img-fluid">
-                </a>
+                <img src="{{ MEDIA_URL }}noimage.png" alt="{{ cd.name }}" class="card-img-top img-fluid">
                 {% endif %}
             </div>
         </div>
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
-                <p class="mb-0">{{ cd.name }}</p>
-                <p class="lead mb-0 text-left font-weight-bold">${{ cd.price }}</p>
-
-                <p class="mt-3">{{ cd.description }}</p>
-
+                <p class="mt-3 text-left">{{ cd.description }}</p>
                 <form class="form" action="" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
+                            <p class="mt-3 text-left"><strong>Quantity:</strong></p>
                             <div class="form-group w-50">
                                 <div class="input-group">
                                     <div class="input-group-prepend">
@@ -62,7 +59,10 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12">
+                        <div class="col-6">
+                            <p class="lead mb-0 text-left font-weight-bold">Price: €{{ cd.price }}</p>
+                        </div>
+                        <div class="col-12 text-left">
                             <a href="{% url 'shop' %}" class="btn btn-outline-black rounded-0 mt-5">
                                 <span class="icon">
                                     <i class="fas fa-chevron-left"></i>
@@ -81,3 +81,8 @@
 </div>
 
 {% endblock content %}
+
+{% block postjs %}
+{{ block.super }}
+{% include 'shop/includes/quantity_input_script.html' %}
+{% endblock postjs %}
