--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -10,7 +10,6 @@
 {% endblock page_header %}
 
 {% block content %}
-{% comment %} <h1>SHOPPING BAG HERE!</h1> {% endcomment %}
 <div class="overlay"></div>
 <div class="container mb-2">
     <div class="row">
@@ -31,7 +30,7 @@
                     <i class="fas fa-chevron-left"></i>
                 </span>
                 <span class="text-uppercase">
-                    Keep Shopping
+                    Back to Shopping
                 </span>
             </a>
             {% endif %}
