--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -34,7 +34,7 @@
         <div class="col-12 col-md-6 col-lg-4">
             <div class="product-details-container mb-5 mt-md-5">
                 <p class="mt-3 text-left">{{ cd.description }}</p>
-                <form class="form" action="" method="POST">
+                <form class="form" action="{% url 'add_to_bag' cd.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
                         <div class="col-12">
