--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% load bag_tools %}
 
 {% block page_header %}
 <div class="container header-container">
@@ -48,21 +49,42 @@
                         <td class="py-3">
                             <p class="my-0">€{{ item.cd.price }}</p>
                         </td>
-                        <td class="py-3">
-                            <p class="my-0">{{ item.quantity }}</p>
+                        <td class="py-3 w-25">
+                            <form action="{% url 'adjust_bag' item.item_id %}" method="POST" class="form update-form">
+                                {% csrf_token %}
+                                <div class="form-group">
+                                    <div class="input-group">
+                                        <div class="input-group-prepend">
+                                            <button class="decrement-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-minus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                        <input class="form-control form-control-sm qty_input" type="number" name="quantity" value="{{ item.quantity }}" min="1" max="99" data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                        <div class="input-group-append">
+                                            <button class="increment-qty btn btn-black btn-sm rounded-0" data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                <span>
+                                                    <i class="fas fa-plus fa-sm"></i>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                            <a  class="update-link text-info float-left"><small>Update</small></a>
+                            <a  class="remove-item update-link text-danger float-right" id="remove_{{ item.item_id }}"><small>Delete</small></a>
                         </td>
                         <td class="py-3">
-                            <p class="my-0">€{{ item.cd.price }}</p>
+                            <p class="my-0">€{{ item.cd.price | calc_subtotal:item.quantity }}</p>
                         </td>
                     </tr>
                     {% endfor %}
-
-
                     <tr>
                         <td colspan="5" class="pt-5 text-right">
-                            <h6><strong>Bag Total: ${{ total|floatformat:2 }}</strong></h6>
-                            <h6>Delivery: ${{ delivery|floatformat:2 }}</h6>
-                            <h4 class="mt-4"><strong>Grand Total: ${{ grand_total|floatformat:2 }}</strong></h4>
+                            <h6><strong>Bag Total: €{{ total|floatformat:2 }}</strong></h6>
+                            <h6>Delivery: €{{ delivery|floatformat:2 }}</h6>
+                            <h4 class="mt-4"><strong>Grand Total: €{{ grand_total|floatformat:2 }}</strong></h4>
                             {% if free_delivery_delta > 0 %}
                             <p class="mb-1 text-danger">
                                 You could get free delivery by purchasing just <strong>{{ free_delivery_delta }}</strong> more CD(s)!
@@ -86,10 +108,7 @@
                             </a>
                         </td>
                     </tr>
-
-
                 </table>
-
             </div>
             {% else %}
             <p class="lead mb-5">Your bag is empty.</p>
@@ -106,3 +125,29 @@
     </div>
 </div>
 {% endblock content %}
+
+{% block postjs %}
+{{ block.super }}
+{% include 'shop/includes/quantity_input_script.html' %}
+
+<script type="text/javascript">
+    $('.update-link').click(function(e) {
+        let form = $(this).prev('.update-form');
+        form.submit();
+    })
+
+    $('.remove-item').click(function(e) {
+        let csrfToken = "{{ csrf_token }}";
+        let itemId = $(this).attr('id').split('remove_')[1];
+        let url = `/bag/remove/${itemId}/`;
+        let data = {
+            'csrfmiddlewaretoken': csrfToken
+        };
+
+        $.post(url, data)
+            .done(function() {
+                location.reload();
+            });
+    });
+</script>
+{% endblock postjs %}
