--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,21 @@
     </header>
     <main>
         {% if messages %}
-        <div class="message-container"></div>
+        <div class="message-container">
+            {% for message in messages %}
+            {% with message.level as level %}
+            {% if level == 40 %}
+            {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+            {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+            {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+            {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+            {% endwith %}
+            {% endfor %}
+        </div>
         {% endif %}
         {% block extra_header %}
         {% endblock extra_header %}
@@ -44,7 +58,13 @@
     {% block main_js %}
     <script src="https://kit.fontawesome.com/9464f43776.js" crossorigin="anonymous"></script>
     <script src=""></script>
-    {% endblock main_js %} {% block postjs %} {% endblock postjs %}
+    {% endblock main_js %}
+
+    {% block postjs %}
+    <script type="text/javascript">
+        $('.toast').toast('show');
+    </script>
+    {% endblock %}
 </body>
 
 </html>
