--- a/templates/base.html
+++ b/templates/base.html
@@ -17,6 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.4.3/umd/popper.min.js" integrity="sha512-sdrkWdHcsY+FX+Cp0Is6hnNkukQewnksFdGjyD6wEvcfBQfseLJWwE0hB3+DIlRndHx5cuFuf0RbLOBST4cjCA==" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha512-I5TkutApDjnWuX+smLIPZNhw+LhTd8WrQhdCKsxCFRSvhFx2km8ZfEpNIhF9nq04msHhOkE8BMOBj5QE07yhMA==" crossorigin="anonymous"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     <script src="{% static 'js/main.js' %}"></script>
     {% endblock js %}
     <title>Guillermo Brachetta {% block title %}
@@ -64,7 +65,7 @@
     <script type="text/javascript">
         $('.toast').toast('show');
     </script>
-    {% endblock %}
+    {% endblock postjs %}
 </body>
 
 </html>
