--- a/shop/templates/shop/cd_details.html
+++ b/shop/templates/shop/cd_details.html
@@ -84,5 +84,5 @@
 
 {% block postjs %}
 {{ block.super }}
-{% include 'shop/includes/quantity_input_script.html' %}
+<script src="{% static 'shop/js/quantity_input_script.js' %}"></script>
 {% endblock postjs %}
