--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -41,7 +41,7 @@
                         {% if request.user.is_superuser %}
                         {% comment %} <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a> {% endcomment %}
                         {% endif %}
-                        {% comment %} <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a> {% endcomment %}
+                        <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                         <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
                         {% else %}
                         <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
