--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -15,10 +15,28 @@
     <div class="row">
         <div class="col">
             <hr>
-            <h2 class="logo-font mb-4">Profile</h2>
+            <h2 class="logo-font mb-4">My Profile</h2>
             <hr>
         </div>
     </div>
+    <div class="row">
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Default Delivery Information</p>
+            <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                {% csrf_token %}
+                {{ form|crispy }}
+                <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+            </form>
+        </div>
+        <div class="col-12 col-lg-6">
+            <p class="text-muted">Order History</p>
+            {{ orders }}
+        </div>
+    </div>
 </div>
-{{ profile }}
-{% endblock content %}
+{% endblock %}
+
+{% block postjs %}
+{{ block.super }}
+<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+{% endblock postjs %}
