--- a/templates/includes/toasts/toast_success.html
+++ b/templates/includes/toasts/toast_success.html
@@ -20,7 +20,11 @@
             {% for item in bag_items %}
             <div class="row">
                 <div class="col-3 my-1">
-                    <img class="w-100" src="{{ item.cd.image.url }}">
+                    {% if item.cd.image %}
+                    <img class="w-100" src="{{ item.cd.image.url }}" alt="{{ item.cd.name }}">
+                    {% else %}
+                    <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.cd.name }}">
+                    {% endif %}
                 </div>
                 <div class="col-9">
                     <p class="my-0"><strong>{{ item.cd.name }}</strong></p>
