--- a/shop/templates/shop/edit_cd.html
+++ b/shop/templates/shop/edit_cd.html
@@ -16,19 +16,19 @@
         <div class="col-12 col-md-6">
             <hr>
             <h2 class="logo-font mb-4">CD Management</h2>
-            <h5 class="text-muted">Add a CD</h5>
+            <h5 class="text-muted">Edit a CD</h5>
             <hr>
         </div>
     </div>
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'add_cd' %}" class="form mb-2" enctype="multipart/form-data">
+            <form method="POST" action="{% url 'edit_cd' cd.id %}" class="form mb-2" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ form | crispy }}
                 <div class="text-right">
                     <a class="btn btn-outline-black rounded-0" href="{% url 'shop' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Add CD</button>
+                    <button class="btn btn-black rounded-0" type="submit">Update CD</button>
                 </div>
             </form>
         </div>
