--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -8,13 +8,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link navbar-items" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Biography</a>
+                <a class="nav-link navbar-items" href="#">Biography</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <a class="nav-link dropdown-toggle navbar-items" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                     Media
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -24,7 +24,7 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'shop' %}">Shop</a>
+                <a class="nav-link navbar-items" href="{% url 'shop' %}">Shop</a>
             </li>
         </ul>
         <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
@@ -32,8 +32,8 @@
                 <li class="list-inline-item dropdown">
                     <a class="text-nav nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <div class="text-center">
-                            <div><i class="fas fa-user fa-lg"></i></div>
-                            <p class="my-0">My Account</p>
+                            <div><i class="fas fa-user fa-lg navbar-items"></i></div>
+                            <p class="my-0 navbar-items">My Account</p>
                         </div>
                     </a>
                     <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -52,8 +52,8 @@
                 <li class="list-inline-item">
                     <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-nav{% endif %} nav-link" href="{% url 'view_bag' %}">
                         <div class="text-center">
-                            <div><i class="fas fa-shopping-bag fa-lg"></i></div>
-                            <p class="my-0">
+                            <div><i class="fas fa-shopping-bag fa-lg navbar-items"></i></div>
+                            <p class="my-0 navbar-items">
                                 {% if grand_total %}
                                 €{{ grand_total|floatformat:2 }}
                                 {% else %}
