--- a/shop/templates/shop/add_cd.html
+++ b/shop/templates/shop/add_cd.html
@@ -51,3 +51,11 @@
     });
 </script>
 {% endblock %}
+
+{% block page_footer %}
+<div class="container footer-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock page_footer %}
