Centered forms - Included block for padding bottom

--- a/templates/base.html
+++ b/templates/base.html
@@ -55,6 +55,10 @@
         {% block content %}
         {% endblock content %}
 
+        {% block page_footer %}
+        {% endblock page_footer %}
+
+        {% include 'includes/footer.html' %}
     </main>
     {% block main_js %}
     <script src="https://kit.fontawesome.com/9464f43776.js" crossorigin="anonymous"></script>
