--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -133,25 +133,5 @@
 {% block postjs %}
 {{ block.super }}
 <script src="{% static 'shop/js/quantity_input_script.js' %}"></script>
-
-<script type="text/javascript">
-    $('.update-link').click(function(e) {
-        let form = $(this).prev('.update-form');
-        form.submit();
-    })
-
-    $('.remove-item').click(function(e) {
-        let csrfToken = "{{ csrf_token }}";
-        let itemId = $(this).attr('id').split('remove_')[1];
-        let url = `/bag/remove/${itemId}/`;
-        let data = {
-            'csrfmiddlewaretoken': csrfToken
-        };
-
-        $.post(url, data)
-            .done(function() {
-                location.reload();
-            });
-    });
-</script>
+<script src="{% static 'bag/js/update_delete_scripts.js' %}"></script>
 {% endblock postjs %}
