--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -24,7 +24,7 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row justify-content-center">
         <div class="col-12 col-lg-7">
             <div class="order-confirmation-wrapper p-2 border">
                 <div class="row">
