--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,7 +20,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-5">
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                 {% csrf_token %}
@@ -28,7 +28,7 @@
                 <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
             </form>
         </div>
-        <div class="col-12 col-lg-6">
+        <div class="col-12 col-lg-7">
             <p class="text-muted">Order History</p>
             <div class="order-history table-responsive">
                 <table class="table table-sm table-borderless">
@@ -44,31 +44,32 @@
                         {% for order in orders %}
                         <tr>
                             <td>
-                                <a href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
+                                <a class="small" href="{% url 'order_history' order.order_number %}" title="{{ order.order_number }}">
                                     {{ order.order_number|truncatechars:8 }}
                                 </a>
                             </td>
-                            <td>{{ order.date }}</td>
+                            <td><small>{{ order.date|date:"d M Y" }}</small></td>
                             <td>
                                 <ul class="list-unstyled">
                                     {% for item in order.lineitems.all %}
                                     <li class="small">
-                                        {{ item.cd.name }} x{{ item.quantity }}
+                                        {{ item.cd.name }} (x{{ item.quantity }})
                                     </li>
                                     {% endfor %}
                                 </ul>
                             </td>
-                            <td>${{ order.grand_total }}</td>
+                            <td><strong>${{ order.grand_total }}</strong></td>
                         </tr>
                         {% endfor %}
                     </tbody>
                 </table>
             </div>
         </div>
-        </div>
+    </div>
+</div>
 {% endblock %}
 
 {% block postjs %}
 {{ block.super }}
-<script type="text/javascript" src="{% static 'profiles/js/countryfield.js' %}"></script>
+<script src="{% static 'profiles/js/countryfield.js' %}"></script>
 {% endblock postjs %}
