--- a/shop/templates/shop/edit_cd.html
+++ b/shop/templates/shop/edit_cd.html
@@ -42,12 +42,15 @@
 </div>
 {% endblock %}
 
+{% block page_footer %}
+<div class="container footer-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock page_footer %}
+
 {% block postjs %}
 {{ block.super }}
-<script type="text/javascript">
-    $('#new-image').change(function() {
-        var file = $('#new-image')[0].files[0];
-        $('#filename').text(`Image will be set to: ${file.name}`);
-    });
-</script>
+<script src="{% static 'shop/js/image_script.js' %}" type="text/javascript"></script>
 {% endblock %}
