Created album template including masonry js grid

--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block postcss %}
+<link rel="stylesheet" href="{% static 'album/css/lightbox.css' %}" />
 
+{% endblock postcss %}
 {% block page_header %}
 <div class="container header-container">
     <div class="row">
@@ -10,5 +13,41 @@
 {% endblock page_header %}
 
 {% block content %}
-<h1>ALBUM HERE!</h1>
+<div class="overlay"></div>
+<div class="container-fluid">
+<div class="row">
+    <div class="col">
+        <hr>
+        <h2 class="mb-4">Photo Album</h2>
+        <hr>
+    </div>
+</div>
+    <div class="row justify-content-center">
+        <div class="col-8 ">
+            <div class="grid">
+                {% for photo in album %}
+                <a href="{{ photo.image.url }}" data-lightbox="album" data-title="{{ photo.caption }}">
+                    <img src="{{ photo.image.url }}" alt="{{ photo.image.name }}" width="400">
+                </a>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+</div>
+
 {% endblock content %}
+
+{% block page_footer %}
+<div class="container footer-container">
+    <div class="row">
+        <div class="col"></div>
+    </div>
+</div>
+{% endblock page_footer %}
+
+{% block postjs %}
+{{ block.super }}
+<script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.js"></script>
+<script src="{% static 'album/js/lightbox.js' %}"></script>
+<script src="{% static 'album/js/album.js' %}"></script>
+{% endblock %}
