--- a/album/templates/album/album.html
+++ b/album/templates/album/album.html
@@ -14,15 +14,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container">
-    <div class="row">
-        <div class="col">
-            <hr>
-            <h2 class="mb-4">Photo Album</h2>
-            <hr>
-        </div>
-    </div>
-</div>
+
 <!--
 <div class="container">
     <div class="grid">
@@ -38,7 +30,7 @@
 </div>
 -->
 
-<div class="container">
+<div class="container mt-3 mt-md-5">
     <div class="grid">
         <div class="grid-col grid-col--1"></div>
         <div class="grid-col grid-col--2"></div>
