--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         {% endblock title %} </title>
 </head>
 
-<body class="text-center bg-secondary">
+<body class="text-center">
     <header>
         {% include 'includes/navigation.html' %}
     </header>
