Deleted dummy text

--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -20,11 +20,11 @@
             <div class="img"></div>
             <div class="row">
                 <div class="wrapper-musician col-6">
-                    <h1 class="musician">THE MUSICIAN</h1>
+                    <h1 class="musician">MUSICIAN</h1>
                 </div>
                 <div class="wrapper-musician-text col-6">
                     <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt error dignissimos nulla tenetur autem labore nam accusantium! Iusto assumenda, soluta, in voluptates quibusdam facere neque accusamus nulla maxime rem facilis sequi molestiae. Ullam facere repudiandae blanditiis, nostrum nulla doloremque, laudantium iste accusamus esse et similique voluptatem ex dolore ipsa? Iusto.
+                    Lorem ipsum
                     </p>
                 </div>
             </div>
@@ -35,15 +35,11 @@
             <div class="img-02"></div>
             <div class="row">
                 <div class="wrapper-researcher col-6">
-                    <h1 class="researcher">THE RESEARCHER</h1>
+                    <h1 class="researcher">RESEARCHER</h1>
                 </div>
                 <div class="wrapper-researcher-text col-6">
                     <p>
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. A, quam labore. Libero
-                        earum ad et accusantium aliquam pariatur fugiat ex rerum culpa, labore
-                        temporibus sit aspernatur suscipit vel commodi, ut minima laudantium vitae non
-                        alias veniam, consequuntur officiis optio! Ducimus consectetur excepturi nam
-                        suscipit nihil, consequuntur aperiam voluptatem exercitationem praesentium!
+                        Lorem, ipsum
                     </p>
                 </div>
             </div>
