--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -13,8 +13,8 @@
             <li class="nav-item {{ media }}">
                 <a class="nav-link navbar-items" href="{% url 'album' %}">Media</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link navbar-items" href="{% url 'music' %}">Calendar</a>
+            <li class="nav-item {{ events }}">
+                <a class="nav-link navbar-items" href="{% url 'events' %}">Events</a>
             </li>
             <li class="nav-item {{ shop }}">
                 <a class="nav-link navbar-items" href="{% url 'shop' %}">Shop</a>
